# web-genetics-browser

./: .dir-locals.el  Cargo.toml  LICENSE_MIT
shaders/: gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  gwas.frag  gwas.frag.spv  gwas.vert  gwas.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: animation.rs  coordinates.rs  geometry.rs  gui.rs  gwas.rs  lib.rs  state.rs  view.rs
src/gui/: egui_wgpu.rs
www/: bootstrap.js  index.html  index.js  mouse_chrs.json  package-lock.json  package.json
